# High-Frequency-Market-Making-with-Limit-Order-Book-Simulation

./: .gitignore  CMakeLists.txt  README.md  lob_simulation
include/engine/: MatchingEngine.hpp  Order.hpp  OrderBook.hpp
include/simulation/: LatencyModel.hpp  MarketSimulator.hpp
include/strategies/: AvellanedaStoikov.hpp  MarketMaker.hpp
scripts/: analyze_results.py
src/: main.cpp
src/engine/: MatchingEngine.cpp  OrderBook.cpp
src/simulation/: LatencyModel.cpp  MarketSimulator.cpp
src/strategies/: AvellanedaStoikov.cpp
